# challenge-backend

./: Cargo.toml  api.json  api.yaml  readme.md
.github/workflows/: rust.yml  security_audit.yml
migrations/: 20231023184033_init.down.sql  20231023184033_init.up.sql
src/: config.rs  email.rs  handler.rs  jwt_auth.rs  login_handler.rs  main.rs  route.rs  run.rs  token.rs  user.rs
sysvinit/: challenge_server
