[package]
name = "challenge_server"
version = "2.0.0"
edition = "2021"

[dependencies]
log = "0.4.17"
simple_logger = "4.2.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
axum = "0.6.20"
axum-server = "0.5.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
rand = "0.8.4"
lazy_static = "1.4.0"
tower-service = "0.3.2"
envcrypt = "0.5.0"
scoreboard_db = { version = "0.2.1", features = ["database"]}