[package]
name = "challenge_server"
version = "2.0.0"
edition = "2021"

[dependencies]
log = "0.4.17"
simple_logger = "4.2.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
axum = "0.6.20"
axum-server = "0.5.1"
axum-extra = { version = "0.8.0", features = ["cookie"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
rand = "0.8.4"
lazy_static = "1.4.0"
tower-service = "0.3.2"
envcrypt = "0.5.0"
scoreboard_db = { version = "0.2.1", features = ["database"]}
argon2 = "0.5.0"
jsonwebtoken = "9.1.0"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "mysql", "chrono" ] }
chrono = { version = "0.4.24", features = ["serde"] }
rand_core = { version = "0.6.4", features = ["std"] }
time = "0.3.20"
base64 = "0.21.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }